import OS in the main

--- a/banks_project.ipynb
+++ b/banks_project.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,10 +239,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted DataFrame:    Rank                                Bank name  Market cap (US$ billion)\n",
+      "0     1                           JPMorgan Chase                    432.92\n",
+      "1     2                          Bank of America                    231.52\n",
+      "2     3  Industrial and Commercial Bank of China                    194.56\n",
+      "3     4               Agricultural Bank of China                    160.68\n",
+      "4     5                                HDFC Bank                    157.91\n",
+      "153.17\n",
+      "Transformed DataFrame:    Rank                                Bank name  Market cap (US$ billion)  \\\n",
+      "0     1                           JPMorgan Chase                    432.92   \n",
+      "1     2                          Bank of America                    231.52   \n",
+      "2     3  Industrial and Commercial Bank of China                    194.56   \n",
+      "3     4               Agricultural Bank of China                    160.68   \n",
+      "4     5                                HDFC Bank                    157.91   \n",
+      "\n",
+      "   MC_GBP_Billion  MC_EUR_Billion  MC_INR_Billion  \n",
+      "0          346.34          419.93        37122.89  \n",
+      "1          185.22          224.57        19852.84  \n",
+      "2          155.65          188.72        16683.52  \n",
+      "3          128.54          155.86        13778.31  \n",
+      "4          126.33          153.17        13540.78  \n",
+      "Data saved to CSV: ./output/Largest_banks_data.csv\n",
+      "Data loaded to database: ./output/Banks.db\n",
+      "Query Results:\n",
+      "[(1, 'JPMorgan Chase', 432.92, 346.34, 419.93, 37122.89), (2, 'Bank of America', 231.52, 185.22, 224.57, 19852.84), (3, 'Industrial and Commercial Bank of China', 194.56, 155.65, 188.72, 16683.52), (4, 'Agricultural Bank of China', 160.68, 128.54, 155.86, 13778.31), (5, 'HDFC Bank', 157.91, 126.33, 153.17, 13540.78), (6, 'Wells Fargo', 155.87, 124.7, 151.19, 13365.85), (7, 'HSBC Holdings PLC', 148.9, 119.12, 144.43, 12768.18), (8, 'Morgan Stanley', 140.83, 112.66, 136.61, 12076.17), (9, 'China Construction Bank', 139.82, 111.86, 135.63, 11989.56), (10, 'Bank of China', 136.81, 109.45, 132.71, 11731.46)]\n",
+      "[(151.987,)]\n",
+      "[('JPMorgan Chase',), ('Bank of America',), ('Industrial and Commercial Bank of China',), ('Agricultural Bank of China',), ('HDFC Bank',)]\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    # Start of the script, executes only when the script is run directly\n",
     "    try:\n",
@@ -313,6 +348,13 @@
     "\n",
     "        print(f\"Error occurred: {str(e)}\")  # Print the error message to the console\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
